@@ -1,3 +1,10 @@
+2006-01-04  Marcus Brinkmann  <marcus@g10code.de>
+
+	* patches/glib/01-giowin32.patch,
+	patches/glib-2.6.6/01-giowin32.patch,
+	patches/glib-2.8.4/01-giowin32.patch: Notify write thread about fd
+	close.
+
 2006-01-03  Marcus Brinkmann  <marcus@g10code.de>
 
 	* patches/glib-2.8.4/01-giowin32.patch: New file.
